--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 </head>
 <body>
     <div class="container">
+        <!-- sidebar section -->
         <nav class="sidebar">
             <ul>
                 <li>
-                    <span class="mdi mdi-36px mdi-view-dashboard"></span>
-                    <div>DASHBOARD</div>
+                    <div><span class="mdi mdi-36px mdi-view-dashboard"></span>
+                    DASHBOARD</div>
                 </li>
                 <li>
                     <span class="mdi mdi-home"></span>
@@ -41,7 +42,7 @@
                     <div>Communities</div>
                 </li>
 
-                <li></li>
+                <li class="hidden"></li>
 
                 <li>
                     <span class="mdi mdi-wrench"></span>
@@ -57,17 +58,15 @@
                 </li>
             </ul>
         </nav>
+        <!-- header section -->
 
         <header>
-            <div class="search">
-                <span class="mdi mdi-card-search-outline"></span>
-                <input type="search"/>
-
-            </div>
+            <span class="mdi mdi-card-search mdi-36px mdi-dark mdi-inactive"></span>
+            <input type="search"/>
             <div class="profile">
                 <span class="mdi mdi-bell-outline"></span>
                 <span class="mdi mdi-36px mdi-face-man"></span>
-                <div><strong>Max Mustermann</strong></div>
+                <div>Max Mustermann</div>
             </div>
             <div class="profile-bar">
                 <div class="profile-pic">
@@ -84,6 +83,7 @@
                 </div>
             </div>
         </header>
+        <!-- main content section -->
 
     </div>
 </body>
