make Dashboard and Name bold

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <nav class="sidebar">
             <ul>
                 <li>
-                    <div><span class="mdi mdi-36px mdi-view-dashboard"></span>
+                    <div class="bold">
+                    <span class="middle mdi mdi-36px mdi-view-dashboard"></span>
                     DASHBOARD</div>
                 </li>
                 <li>
@@ -65,12 +66,13 @@
             <input type="search"/>
             <div class="profile">
                 <span class="mdi mdi-bell-outline"></span>
-                <span class="main-h mdi mdi-36px mdi-face-man"></span>
-                <div>Max Mustermann</div>
+                <div class="bold">
+                <span class="middle mdi mdi-36px mdi-face-man"></span>
+                Max Mustermann</div>
             </div>
             <div class="profile-bar">
                 <div class="profile-pic">
-                    <span class="mdi mdi-48px mdi-face-man"></span>
+                    <span class="middle mdi mdi-48px mdi-face-man"></span>
                     <div>
                         <p>Hello there,</p>
                         <p>Max Mustermann <a href="#">@Muster_GmbH</a></p>
@@ -189,7 +191,7 @@
                         <span class="mdi mdi-face-man-outline 
                         mdi-24px"></span>
                         <p><a href="#">@name</a></p><br>
-                        <p>sleep eat code</p>
+                        <p>code sleep eat</p>
                     </div>
                     
                 </div>
